...
                    Text("Nombre", style = MaterialTheme.typography.bodyLarge, fontWeight = FontWeight.SemiBold, color = MaterialTheme.colorScheme.primary)
                    Spacer(modifier = Modifier.height(8.dp))
                    TextField(
                        value = nombre,
                        onValueChange = onNombreChange,
                        placeholder = { Text("Introduce tu nombre", color = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.6f)) },
                        modifier = Modifier.fillMaxWidth().height(62.dp).testTag("input_nombre"),
                        colors = TextFieldDefaults.colors(focusedContainerColor = MaterialTheme.colorScheme.primary.copy(alpha = 0.09f), unfocusedContainerColor = MaterialTheme.colorScheme.primary.copy(alpha = 0.03f), cursorColor = MaterialTheme.colorScheme.primary, focusedIndicatorColor = Color.Transparent, unfocusedIndicatorColor = Color.Transparent),
                        shape = RoundedCornerShape(8.dp),
                        enabled = registerState !is UiState.Loading
                    )

                    Spacer(modifier = Modifier.height(17.dp))
...
                    Text("Apellido", style = MaterialTheme.typography.bodyLarge, fontWeight = FontWeight.SemiBold, color = MaterialTheme.colorScheme.primary)
                    Spacer(modifier = Modifier.height(8.dp))
                    TextField(
                        value = apellido,
                        onValueChange = onApellidoChange,
                        placeholder = { Text("Introduce tu apellido", color = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.6f)) },
                        modifier = Modifier.fillMaxWidth().height(62.dp).testTag("input_apellido"),
                        colors = TextFieldDefaults.colors(focusedContainerColor = MaterialTheme.colorScheme.primary.copy(alpha = 0.09f), unfocusedContainerColor = MaterialTheme.colorScheme.primary.copy(alpha = 0.03f), cursorColor = MaterialTheme.colorScheme.primary, focusedIndicatorColor = Color.Transparent, unfocusedIndicatorColor = Color.Transparent),
                        shape = RoundedCornerShape(8.dp),
                        enabled = registerState !is UiState.Loading
                    )

                    Spacer(modifier = Modifier.height(17.dp))
...
                    Text("Correo", style = MaterialTheme.typography.bodyLarge, fontWeight = FontWeight.SemiBold, color = MaterialTheme.colorScheme.primary)
                    Spacer(modifier = Modifier.height(8.dp))
                    TextField(
                        value = email,
                        onValueChange = onEmailChange,
                        placeholder = { Text("ejemplo@correo.com", color = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.6f)) },
                        modifier = Modifier.fillMaxWidth().height(62.dp).testTag("input_email"),
                        colors = TextFieldDefaults.colors(focusedContainerColor = MaterialTheme.colorScheme.primary.copy(alpha = 0.09f), unfocusedContainerColor = MaterialTheme.colorScheme.primary.copy(alpha = 0.03f), cursorColor = MaterialTheme.colorScheme.primary, focusedIndicatorColor = Color.Transparent, unfocusedIndicatorColor = Color.Transparent),
                        shape = RoundedCornerShape(8.dp),
                        enabled = registerState !is UiState.Loading
                    )

                    Spacer(modifier = Modifier.height(17.dp))
...
                    Spacer(modifier = Modifier.height(8.dp))
                    TextField(
                        value = password,
                        onValueChange = onPasswordChange,
                        placeholder = { Text("******", color = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.6f)) },
                        visualTransformation = PasswordVisualTransformation(),
                        modifier = Modifier.fillMaxWidth().height(62.dp).testTag("input_password"),
                        colors = TextFieldDefaults.colors(focusedContainerColor = MaterialTheme.colorScheme.primary.copy(alpha = 0.09f), unfocusedContainerColor = MaterialTheme.colorScheme.primary.copy(alpha = 0.03f), cursorColor = MaterialTheme.colorScheme.primary, focusedIndicatorColor = Color.Transparent, unfocusedIndicatorColor = Color.Transparent),
                        shape = RoundedCornerShape(8.dp),
                        enabled = registerState !is UiState.Loading
                    )

                    Spacer(modifier = Modifier.height(16.dp))

                    Row(verticalAlignment = Alignment.CenterVertically, modifier = Modifier.padding(vertical = 8.dp)) {
                        Checkbox(
                            checked = isChecked,
                            onCheckedChange = onCheckedChange,
                            modifier = Modifier.testTag("check_tyc")
                        )
                        Spacer(modifier = Modifier.width(8.dp))
                        Column {
                            Text("He leído y acepto los:", fontSize = 13.sp, color = Color.Gray)
                            Row(modifier = Modifier.wrapContentWidth()) {
                                Text("Términos", color = MaterialTheme.colorScheme.primary, fontWeight = FontWeight.Bold, fontSize = 13.sp, modifier = Modifier.clickable { onNavigateTyC() })
...

                    Spacer(modifier = Modifier.height(16.dp))

                    Button(
                        onClick = onRegisterClick,
                        modifier = Modifier
                            .testTag("btn_register")
                            .background(brush = Brush.horizontalGradient(colors = listOf(MaterialTheme.colorScheme.primary, MaterialTheme.colorScheme.primary.copy(0.8f))), shape = MaterialTheme.shapes.extraLarge)
                            .fillMaxWidth()
                            .height(62.dp),
                        contentPadding = PaddingValues(),
                        colors = ButtonDefaults.buttonColors(containerColor = Color.Transparent),
                        enabled = registerState !is UiState.Loading
...
